apps/kube/rareicon/manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: rareicon
    labels:
        app.kubernetes.io/part-of: rareicon
