apps/kube/rareicon/manifest/hyperlane-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rareicon-hyperlane
  namespace: rareicon
  labels:
    app: rareicon-hyperlane
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rareicon-hyperlane
  template:
    metadata:
      labels:
        app: rareicon-hyperlane
    spec:
      containers:
      - name: rareicon-hyperlane
        image: kbve/kbve-hyperlane:1.2.1
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: rareicon-hyperlane-service
  namespace: rareicon
  labels:
    app: rareicon-hyperlane
spec:
  type: ClusterIP
  selector:
    app: rareicon-hyperlane
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
