apps/kube/rareicon/manifest/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: rareicon-routes
    namespace: rareicon
spec:
    parentRefs:
        - name: kbve-gateway
          namespace: kbve
    hostnames:
        - rareicon.com
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: rareicon-service
                port: 4323
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: rareicon-api-routes
    namespace: rareicon
spec:
    parentRefs:
        - name: kbve-gateway
          namespace: kbve
    hostnames:
        - api.rareicon.com
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: rareicon-service
                port: 4323
