apps/kube/rareicon/manifest/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rareicon-ingress
  namespace: rareicon
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: rareicon.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rareicon-hyperlane-service
            port:
              number: 3000
